test_scripts/errors/else_body_undefined.shm
if false { 1; } else { undefined_var; }
