test_scripts/errors/else_body_undefined.stderr
 1 | if false { 1; } else { undefined_var; }
                            ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
